--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
-
 <!DOCTYPE html>
 <html lang="es" class="dark">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Verso</title>
+    <title>Verso | MelodIA lab</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
-      // Initialize theme before content loads to avoid flicker
       try {
         if (localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
           document.documentElement.classList.add('dark')
@@ -39,40 +37,31 @@
       }
     </script>
     <style>
-      /* Custom scrollbar for chord view */
-      .chord-scroll::-webkit-scrollbar {
-        width: 8px;
-      }
-      .chord-scroll::-webkit-scrollbar-track {
-        background: transparent; 
-      }
-      .chord-scroll::-webkit-scrollbar-thumb {
-        background: #991b1b; 
-        border-radius: 4px;
-      }
-      /* Light mode scrollbar fix */
-      html:not(.dark) .chord-scroll::-webkit-scrollbar-thumb {
-        background: #ef4444;
-      }
+      .chord-scroll::-webkit-scrollbar { width: 8px; }
+      .chord-scroll::-webkit-scrollbar-track { background: transparent; }
+      .chord-scroll::-webkit-scrollbar-thumb { background: #991b1b; border-radius: 4px; }
+      html:not(.dark) .chord-scroll::-webkit-scrollbar-thumb { background: #ef4444; }
+      body { margin: 0; padding: 0; min-height: 100vh; background-color: #09090b; }
     </style>
-  <script type="importmap">
+<script type="importmap">
 {
   "imports": {
-    "react": "https://aistudiocdn.com/react@^19.2.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
-    "firebase/app": "https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js",
-    "firebase/firestore": "https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js",
-    "firebase/auth": "https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js",
-    "firebase/": "https://aistudiocdn.com/firebase@^12.6.0/"
+    "react": "https://esm.sh/react@18.2.0",
+    "react/": "https://esm.sh/react@18.2.0/",
+    "react-dom": "https://esm.sh/react-dom@18.2.0",
+    "react-dom/": "https://esm.sh/react-dom@18.2.0/",
+    "lucide-react": "https://esm.sh/lucide-react@0.344.0?external=react",
+    "@google/genai": "https://esm.sh/@google/genai@1.30.0",
+    "firebase/app": "https://www.gstatic.com/firebasejs/10.8.1/firebase-app.js",
+    "firebase/firestore": "https://www.gstatic.com/firebasejs/10.8.1/firebase-firestore.js",
+    "firebase/auth": "https://www.gstatic.com/firebasejs/10.8.1/firebase-auth.js",
+    "firebase/": "https://esm.sh/firebase@^12.9.0/"
   }
 }
 </script>
-</head>
+  </head>
   <body class="bg-zinc-50 text-zinc-900 dark:bg-zinc-950 dark:text-zinc-100 antialiased selection:bg-brand-500 selection:text-white transition-colors duration-300">
     <div id="root"></div>
-    <script type="module" src="./index.tsx"></script>
+    <script type="module" src="index.tsx"></script>
   </body>
 </html>
