--- a/index.html
+++ b/index.html
@@ -13,19 +13,20 @@
         document.documentElement.classList.remove('dark')
       }
     } catch (_) { }
-
+  </script>
+  <script type="importmap">
     {
       "imports": {
         "react": "https://esm.sh/react@18.2.0",
-          "react/": "https://esm.sh/react@18.2.0/",
-            "react-dom": "https://esm.sh/react-dom@18.2.0",
-              "react-dom/": "https://esm.sh/react-dom@18.2.0/",
-                "lucide-react": "https://esm.sh/lucide-react@0.344.0?external=react",
-                  "@google/genai": "https://esm.sh/@google/genai@1.30.0",
-                    "firebase/app": "https://www.gstatic.com/firebasejs/10.8.1/firebase-app.js",
-                      "firebase/firestore": "https://www.gstatic.com/firebasejs/10.8.1/firebase-firestore.js",
-                        "firebase/auth": "https://www.gstatic.com/firebasejs/10.8.1/firebase-auth.js",
-                          "firebase/": "https://esm.sh/firebase@^12.9.0/"
+        "react/": "https://esm.sh/react@18.2.0/",
+        "react-dom": "https://esm.sh/react-dom@18.2.0",
+        "react-dom/": "https://esm.sh/react-dom@18.2.0/",
+        "lucide-react": "https://esm.sh/lucide-react@0.344.0?external=react",
+        "@google/genai": "https://esm.sh/@google/genai@1.30.0",
+        "firebase/app": "https://www.gstatic.com/firebasejs/10.8.1/firebase-app.js",
+        "firebase/firestore": "https://www.gstatic.com/firebasejs/10.8.1/firebase-firestore.js",
+        "firebase/auth": "https://www.gstatic.com/firebasejs/10.8.1/firebase-auth.js",
+        "firebase/": "https://esm.sh/firebase@^12.9.0/"
       }
     }
   </script>
